# everybody-codes-rust

./: .gitignore  .markdownlint.json  Cargo.toml  README.md  ec.bat  puzzles.md  qa.ps1  results.md
.github/workflows/: qa.yml  security.yml
input/2024/: ec2024q01p1.txt  ec2024q01p2.txt  ec2024q01p3.txt  ec2024q02p1.txt  ec2024q02p2.txt  ec2024q02p3.txt  ec2024q03p1.txt  ec2024q03p2.txt  ec2024q03p3.txt  ec2024q04p1.txt  ec2024q04p2.txt  ec2024q04p3.txt  ec2024q05p1.txt  ec2024q06p1.txt
src/: ec.rs  ec2024.rs  ecYYYY.rs  ecYYYYqDD.rs  lib.rs  main.rs
src/ec/: ansi.rs  cli.rs  error.rs  runner.rs
src/ec2024/: ec2024q01.rs  ec2024q02.rs  ec2024q03.rs  ec2024q04.rs  ec2024q05.rs  ec2024q06.rs  ec2024q07.rs  ec2024q08.rs  ec2024q09.rs  ec2024q10.rs  ec2024q11.rs  ec2024q12.rs  ec2024q13.rs  ec2024q14.rs  ec2024q15.rs  ec2024q16.rs  ec2024q17.rs  ec2024q18.rs  ec2024q19.rs  ec2024q20.rs
